# potatosearch

./: .dockerignore  .gitignore  Dockerfile  INTEGRITY.md  README.md
.github/workflows/: ci.yml  container.yml
engine/: Pipfile  backends.example.json  pyproject.toml  pytest.ini
engine/potatosearch/: cli.py  config.py  mcp_server.py
engine/potatosearch/api/: server.py
engine/potatosearch/backends/: plaintext_backend.py  zim_backend.py
engine/potatosearch/core/: __init__.py  _faiss_train_worker.py  chunker.py  embedder.py  index.py  ingest.py  progress.py  query.py  refs.py  shard.py
engine/tests/: test_core.py  test_integration.py  test_plaintext_backend.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/api/: client.ts
ui/src/components/: Layout.tsx
ui/src/pages/: Configuration.tsx  Dashboard.tsx  Indexing.tsx  MCP.tsx  Query.tsx
